# Epi_Helper

./: .gitignore  CONTRIBUTING.md  FINAL.pbix  README.md  config.json  niceguy.py  pyproject.toml
.github/: CODEOWNERS  labeler.yaml  labels.yaml  review-groups.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/PULL_REQUEST_TEMPLATE/: basic_pull_request.md
.github/lint/: .mega-linter.yaml  .prettierignore  .yamllint.yaml
.github/workflows/: lint.yaml  meta-assign-reviewers.yaml  meta-label-size.yaml  meta-labeler.yaml  meta-sync-labels.yaml  params.yaml  publish-pypi.yaml  publish-testpypi.yaml  python-build.yaml  python-lint.yaml  python-package.yaml  python-pipeline.yaml  python-release.yaml  scheduled-broken-link-check.yaml
src/epi_helper/: __init__.py  __main__.py
src/epi_helper/lilmodmod/: __init__.py  module.py
