[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "epi_helper"
authors = [
    {name="Lillian Jensen", email="tyg3r@users.noreply.github.com"}
]
description = "TODO: Add stuff here"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["one", "two"]
license = {text = "Apache 2.0"}
classifiers = [
    "Intended Audience :: Data Scientists",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "pandas"
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[project.scripts]
my-script = "epi_helper:main"

[tool.setuptools_scm]
# write_to = "src/epi_helper/_version.py"
version_scheme="release-branch-semver"

[tool.setuptools.dynamic]
# version = {attr = "epi_helper.VERSION"}
readme = {file = "README.md"}

[tool.flake8]
ignore = ["E231"]
path = "src"
exclude = [
    # No need to traverse our git directory
    ".git",
    # Also avoid the venv
    ".venv",
    # There's no value in checking cache directories
    "__pycache__",
    # This contains our build things
    "build",
    # Why?
    "dist"
]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 140
count = true
