[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "epi_helper"
authors = [
    {name="Lillian Jensen", email="tyg3r@users.noreply.github.com"}
]
description = "TODO: Add stuff here"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Data Scientists",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "pandas"
]
dynamic = ["version"]

[project.urls]
"Homepage"="https://github.com/tyg3rr/Epi_Helper"
"Issue Tracker"="https://github.com/tyg3rr/Epi_Helper/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[project.scripts]
my-script = "epi_helper:main"

[tool.setuptools_scm]
# write_to = "src/epi_helper/_version.py"
version_scheme="release-branch-semver"
local_scheme="no-local-version"

[tool.setuptools.dynamic]
# version = {attr = "epi_helper.VERSION"}
readme = {file = "README.md"}

[tool.ruff]
line-length = 140
target-version = "py311"
fix = true
unfixable = []

select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PLC", "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # type-checking imports
  "TCH",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
]

ignore = []

exclude = [
  "doc/sphinxext/*.py",
  "doc/build/*.py",
  "doc/temp/*.py",
  ".eggs/*.py",
  # vendored files
  "pandas/util/version/*",
  "versioneer.py",
  # exclude asv benchmark environments from linting
  "env",
]

[tool.ruff.per-file-ignores]
# relative imports allowed for asv_bench
"asv_bench/*" = ["TID"]
